[package]
name = "test-web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.5"
http-body-util = "0.1.2"
hyper = { version = "1.5.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
log = "0.4.22"
mime_guess = "2.0.5"
tokio = { version = "1.41.0", features = ["full"] }
